CSS: Fix scrollbar

--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -21,20 +21,6 @@
     min-height: 50px;
 }
 
-
-.users-display::-webkit-scrollbar {
-  width: 12px;
-  background-color: #F5F5F5;
-  padding-right: 20px;
-  border-radius: 10px;
-}
-
-.users-display::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-  background-color: var(--purple);
-}
-
 #searchUser .input-group {
     margin-bottom: 0;
 }
@@ -60,19 +46,3 @@
 .actualites {
     min-height: 50px;
 }
-
-
-.actualites-display::-webkit-scrollbar {
-    width: 12px;
-    background-color: #F5F5F5;
-    padding-right: 20px;
-    border-radius: 10px;
-}
-
-.actualites-display::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-    background-color: var(--purple);
-}
-
-
